<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/main" />
        <item
            android:id="@+id/nav_student"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/about_student" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/schedule" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/news" />

        <item
            android:id="@+id/nav_security"
            android:icon="@drawable/ic_menu_security"
            android:title="@string/security" />
    </group>

    <item
        android:id="@+id/nav_theme_switch"
        android:icon="@drawable/ic_theme_light"
        android:title="@string/dark_theme"
        app:actionLayout="@layout/switch_theme" />
</menu>
