<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_main">
    <fragment
        android:id="@+id/nav_main"
        android:name="ru.eva.oriokslive.ui.fragment.main.MainFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_debts"
        android:name="ru.eva.oriokslive.ui.fragment.debt.DebtFragment"
        android:label="@string/debts"
        tools:layout="@layout/fragment_debt" />

    <fragment
        android:id="@+id/nav_student"
        android:name="ru.eva.oriokslive.ui.fragment.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_student" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="ru.eva.oriokslive.ui.fragment.groups.GroupsFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/nav_news"
        android:name="ru.eva.oriokslive.ui.fragment.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_security"
        android:name="ru.eva.oriokslive.ui.fragment.security.SecurityFragment"
        android:label="@string/security"
        tools:layout="@layout/fragment_security" />
</navigation>