<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subject"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0000"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_directions" />

            <TextView
                android:id="@+id/tv_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1100" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:srcCompat="@drawable/ic_person" />

            <TextView
                android:id="@+id/tvTeacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/teachers_name" />

            <TextView
                android:id="@+id/time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>